cha-pre-live-flux2/cha-eks-5b/namespaces/ssplat-dev/namespace-ssplat-dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: ssplat-dev
  name: ssplat-dev
