cha-pre-live-flux2/cha-eks-5b/namespaces/ssplat-dev/network-policy-apps.yaml
###################################
## Allow egress from ssplat-dev ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-ssplat-dev
  namespace: ssplat-dev
spec:
  podSelector: {}
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: ssplat-dev

#########################################
## Allow external http traffic egress  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-http-external
  namespace: ssplat-dev
spec:
  podSelector: {}
  egress:
  - ports:
    - port: 443
      protocol: TCP
    - port: 80
      protocol: TCP

#####################
## ICIS monitoring ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-icis-monitoring
  namespace: ssplat-dev
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: prometheus
      namespaceSelector:
        matchLabels:
          name: icis-monitoring

#####################
## Egress to Nexus ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-nexus-cha
  namespace: ssplat-dev
spec:
  podSelector: {}
  egress:
  - to:
    - ipBlock:
        cidr: 10.52.32.0/22
    ports:
    - protocol: TCP
      port: 8001

#####################################
## Ingress from Ingress Controller ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-ssplat-dev
  namespace: ssplat-dev
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: ssplat-dev
    - namespaceSelector:
        matchLabels:
          name: icis-ingress

#################################################
## Allow traffic to mongo db atlas peered vpc  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-mongodb
  namespace: ssplat-dev
spec:
  podSelector: {}
  egress:
  - to:
    - ipBlock:
        cidr: 192.168.248.0/21
    ports:
    - port: 27015
      protocol: TCP
    - port: 27016
      protocol: TCP
    - port: 27017
      protocol: TCP
    - port: 27015
      protocol: UDP
    - port: 27016
      protocol: UDP
    - port: 27017
      protocol: UDP

##################################################
## Allow traffic to confluent cloud peered vpc  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-confluent
  namespace: ssplat-dev
spec:
  podSelector: {}
  egress:
  - to:
    - ipBlock:
        cidr: 172.16.0.0/16
    ports:
    - port: 443
      protocol: TCP
    - port: 9092
      protocol: TCP

#########################################
## Allow smtp traffic egress           ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-smtp
  namespace: ssplat-dev
spec:
  podSelector: {}
  egress:
  - ports:
    - port: 465
      protocol: TCP
    - port: 25
      protocol: TCP

#########################################
## Allow sql traffic egress           ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-sql
  namespace: ssplat-dev
spec:
  podSelector: {}
  egress:
  - ports:
    - port: 1433
      protocol: TCP

##################################
## Allow egress traffic to iddn ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-iddn
  namespace: ssplat-dev
spec:
  podSelector: {}
  egress:
  - ports:
    - port: 9100
      protocol: TCP
