cha-pre-live-flux2/cha-eks-5b/namespaces/ssplat-dev/network-policy-defaults.yaml
---
######################################### 
## deny all ingress and egress traffic ##

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny-all
  namespace: ssplat-dev
spec:
  podSelector: {}
  ingress: []
  egress: []

---

#########
## DNS ##

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-allow-dns
  namespace: ssplat-dev
spec:
  podSelector: {}
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP

---

################
## monitoring ##

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-allow-monitoring
  namespace: ssplat-dev
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: prometheus
      namespaceSelector:
        matchLabels:
          name: monitoring

---

###########################
## allow internet egress ##

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-allow-internet-egress
  namespace: ssplat-dev
spec:
  podSelector:
    matchLabels:
      require-internet-egress: "true"
  egress:
  - ports:
    - port: 443
      protocol: TCP

---

###########################
## allow vpc https egress ##

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-allow-vpc-https-egress
  namespace: ssplat-dev
spec:
  podSelector: {}
  egress:
  - to:
    - ipBlock:
        cidr: 10.0.0.0/8
    ports:
    - protocol: TCP
      port: 443
